--- a/NoticacaoLocal/Base.lproj/Main.storyboard
+++ b/NoticacaoLocal/Base.lproj/Main.storyboard
@@ -25,16 +25,13 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Enviar Notificação"/>
                                 <connections>
-                                    <action selector="botaoEnviarNotificacao:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SAQ-AP-rG1"/>
+                                    <action selector="botaoEnviarNotificacao:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bjf-xO-oRQ"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="botaoEnviarNotificacao" destination="zpI-rm-9p4" id="oo4-1V-nqx"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
